Untested shortest path implementation - John Schulz